network/simple-app-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: simple-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service1-vs
spec:
  hosts:
  - "*"
  gateways:
  - simple-gateway
  http:
  - match:
    - uri:
        exact: /home
    route:
    - destination:
        host: service1
        port:
          number: 80
